--- a/styles.css
+++ b/styles.css
@@ -3,19 +3,19 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: yellow;
+    background-color: rgb(66, 220, 19);
 }
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #c663a8;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(89, 84, 84, 0.1);
 }
 h1 {
-    text-align: center;
-    margin-bottom: 20px;
+    text-align:left;
+    margin-bottom: 15px;
 }
 .hangman-image {
     display: block;
@@ -47,5 +47,5 @@ button {
     border-radius: 5px;
 }
 button:hover {
-    background-color: #0056b3;
+    background-color: #76d994;
 }
